# lib-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/lib_ml/: foo.py  process_data.py
tests/: test_dummy.py  test_foobar.py
