[tool.poetry]
name = "remla24-team8-lib-ml"
version = "0.1.4"
description = "Pre-processing logic used for both model-training and model-service."
authors = [
    "Tip ten Brink <T.M.tenBrink@student.tudelft.nl>", 
    "Felipe Bononi Bello <bello2001felipe@gmail.com>", 
    "Dielof van Loon <d.i.vanloon@student.tudelft.nl>", 
    "Sayf El Kaddouri <sayfgmaul@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "lib_ml", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
joblib = "^1.4.2"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"
gdown = "4.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
